--- a/checkpoint1_MAUVOIS.ipynb
+++ b/checkpoint1_MAUVOIS.ipynb
@@ -32,9 +32,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.svm import SVR\n",
-    "from sklearn.ensemble import RandomForestRegressor"
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "import xgboost as xgb"
    ]
   },
   {
@@ -52,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Intro — Exploratory Data Analysis\n",
+    "### 1. Exploratory Data Analysis\n",
     "\n",
     "To begin with, we will search for straighforward insights such as distributions and other KPI as a way of understanding the shape and the logic of how the data was gathered and parsed;  also as a means of problematizing our subject. \n",
     "\n"
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +289,7 @@
        "4      False       True       True       True  33400  4/1/2018  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +467,7 @@
        "'There have been 9 different auction dates, all the same week.'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -536,6 +537,502 @@
     "plt.title('Distribution of Age in months')\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Price analysis using Machine Learning Models\n",
+    "\n",
+    "The relation between pricing and the other features in the dataset is not simple to determine based on our previous analysis.\n",
+    "We will now use Machine Learning algorithms to model the relation between the car's features (features) and their price (target).\n",
+    "\n",
+    "Our goal at this stage, is to privilege readability rather than performance, meaning that stock algorithms such as scikit-learn's linear regression, random forest and xgboost, which are among the most popular, should suffice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.1. Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_2.1.1. Data cleaning_\n",
+    "\n",
+    "At the moment of splitting our data into training and testing sets, we need to eliminate categories that have only one item in 'model_key' column. But beforehand we must be sure that the dataset will keep the same relation with reality upon cleaning. \n",
+    "\n",
+    "We will test if the elimination of those items has a statistically significant impact."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test = df_raw.copy()\n",
+    "df_test_counts = df_test['model_key'].value_counts()\n",
+    "df_test_trunc = df_test[df_test['model_key'].isin(df_test_counts[df_test_counts > 1].index)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-test pour la colonne 'price':\n",
+      "T-statistic: -0.11057626011275971\n",
+      "P-value: 0.9119546680317866\n",
+      "Pas de différence statistiquement significative dans les moyennes\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "t_statistic, p_value = ttest_ind(df_test_trunc['price'], df_test['price'], equal_var=False)\n",
+    "\n",
+    "print(\"T-test pour la colonne 'price':\")\n",
+    "print(f\"T-statistic: {t_statistic}\")\n",
+    "print(f\"P-value: {p_value}\")\n",
+    "\n",
+    "if p_value < 0.05:\n",
+    "    print(\"Différence statistiquement significative dans les moyennes\\n\")\n",
+    "else:\n",
+    "    print(\"Pas de différence statistiquement significative dans les moyennes\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statis pour la colonne 'price':\n",
+      "Levene stat: 0.019484686430782598\n",
+      "P-value: 0.8889887778099471\n",
+      "Pas de différence statistiquement significative dans les écart-types\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import levene\n",
+    "\n",
+    "levene_statistic, p_value = levene(df_test_trunc['price'], df_test['price'])\n",
+    "\n",
+    "print(\"Statis pour la colonne 'price':\")\n",
+    "print(f\"Levene stat: {levene_statistic}\")\n",
+    "print(f\"P-value: {p_value}\")\n",
+    "\n",
+    "if p_value < 0.05:\n",
+    "    print(\"Différence statistiquement significative dans les écart-types\\n\")\n",
+    "else:\n",
+    "    print(\"Pas de différence statistiquement significative dans les écart-types\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are now shure that we can get rid of single item categories."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_counts = df['model_key'].value_counts()\n",
+    "df = df[df['model_key'].isin(df_counts[df_counts > 1].index)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_2.1.1. Preprocessing pipeline_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numerical_feats = ['mileage', 'engine_power', 'age']\n",
+    "categorical_feats = ['model_key', 'fuel', 'paint_color', 'car_type']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "dummifier = OneHotEncoder(drop='first')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessor = ColumnTransformer([\n",
+    "    ('numeric', scaler, numerical_feats),\n",
+    "    ('categorical', dummifier, categorical_feats)\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_2.1.2. X, y split_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop(\n",
+    "    columns=[\n",
+    "        'price', 'sold_at', 'maker_key', 'registration_date'\n",
+    "        ])\n",
+    "        \n",
+    "y = df['price']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_2.1.3. Test/Train split_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2, random_state=43)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_2.1.4. Model selection_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = [\n",
+    "    #LinearRegression(),\n",
+    "    Ridge(),\n",
+    "    Lasso(),\n",
+    "    RandomForestRegressor(n_estimators=100, random_state=43),\n",
+    "    xgb.XGBRegressor()\n",
+    "    \n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2 Model implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_2.2.1. Actual preprocessing_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = preprocessor.fit_transform(X_train)\n",
+    "X_test = preprocessor.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_2.2.1. Training pipeline_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression\n",
+      "\n",
+      "Time : 0.0296 sec\n",
+      "Train Score : 0.780 , Test Score : 0.610\n",
+      "Root mean square error : 6340\n",
+      "————————————————————————————————————————\n",
+      "Ridge\n",
+      "\n",
+      "Time : 0.0086 sec\n",
+      "Train Score : 0.777 , Test Score : 0.609\n",
+      "Root mean square error : 6343\n",
+      "————————————————————————————————————————\n",
+      "Lasso\n",
+      "\n",
+      "Time : 0.3442 sec\n",
+      "Train Score : 0.778 , Test Score : 0.610\n",
+      "Root mean square error : 6336\n",
+      "————————————————————————————————————————\n",
+      "RandomForestRegressor\n",
+      "\n",
+      "Time : 4.5517 sec\n",
+      "Train Score : 0.976 , Test Score : 0.665\n",
+      "Root mean square error : 5872\n",
+      "————————————————————————————————————————\n",
+      "XGBRegressor\n",
+      "\n",
+      "Time : 0.1624 sec\n",
+      "Train Score : 0.960 , Test Score : 0.623\n",
+      "Root mean square error : 6235\n",
+      "————————————————————————————————————————\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model in models:\n",
+    "    start = time.time()\n",
+    "    model.fit(X_train,y_train)\n",
+    "    end = time.time()\n",
+    "    print(type(model).__name__)\n",
+    "    print(\"\")\n",
+    "    print(\"Time : {:.4f} sec\".format(end-start))\n",
+    "    print(\"Train Score : {:.3f} , Test Score : {:.3f}\".format(model.score(X_train,y_train), model.score(X_test,y_test)))\n",
+    "    print(\"Root mean square error : {:.0f}\".format(mean_squared_error(y_test,model.predict(X_test))**(1/2)))\n",
+    "    print(40*\"—\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_2.2.2. Fine tuning and crossvalidation using gridsearch_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear Regressions\n",
+    "\n",
+    "LR_parameters = {\n",
+    "    \"alpha\":[0.001, 0.01, 0.1, 1, 3, 6, 10, 50, 100]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RandomForestRegressor\n",
+    "\n",
+    "RF_parameters = {\n",
+    "    \"n_estimators\": [200,300],\n",
+    "    \"max_depth\": [10, 20],\n",
+    "    \"min_samples_split\": [5,10],\n",
+    "    \"min_samples_leaf\": [1,3]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# XGBoostRegressor\n",
+    "\n",
+    "XGB_parameters = {\n",
+    "    'n_estimators': [200,300],\n",
+    "    'max_depth': [1,2,4],\n",
+    "    'gamma':[0,0.1,0.2]\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_combinations = len(grid_search.cv_results_['params'])\n",
+    "\n",
+    "# Perform grid search with tqdm progress bar\n",
+    "with tqdm(total=total_combinations, desc=\"Grid Search\") as pbar:\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "    pbar.update(1)\n",
+    "\n",
+    "grid = GridSearchCV(model,params,cv=4,n_jobs=-1,verbose=3,scoring=mape_scorer)\n",
+    "grid.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid.best_params_, grid.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ridge\n",
+      "Time: 0.2465 sec\n",
+      "\n",
+      "Best Parameters: {'alpha': 1}\n",
+      "Best Score (r2): 0.7564250775890061\n",
+      "Train Score: 0.777, Test Score: 0.609\n",
+      "Root Mean Square Error: 6343\n",
+      "————————————————————————————————————————\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/Caskroom/miniconda/base/envs/cours/lib/python3.11/site-packages/sklearn/linear_model/_coordinate_descent.py:592: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 15410450046.005178, tolerance: 21146793.986024845\n",
+      "  model = cd_fast.sparse_enet_coordinate_descent(\n",
+      "/usr/local/Caskroom/miniconda/base/envs/cours/lib/python3.11/site-packages/sklearn/linear_model/_coordinate_descent.py:592: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 19274877316.206627, tolerance: 20223681.13043478\n",
+      "  model = cd_fast.sparse_enet_coordinate_descent(\n",
+      "/usr/local/Caskroom/miniconda/base/envs/cours/lib/python3.11/site-packages/sklearn/linear_model/_coordinate_descent.py:592: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 14584126277.744246, tolerance: 19511895.993788823\n",
+      "  model = cd_fast.sparse_enet_coordinate_descent(\n",
+      "/usr/local/Caskroom/miniconda/base/envs/cours/lib/python3.11/site-packages/sklearn/linear_model/_coordinate_descent.py:592: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 1610554163.875618, tolerance: 21146793.986024845\n",
+      "  model = cd_fast.sparse_enet_coordinate_descent(\n",
+      "/usr/local/Caskroom/miniconda/base/envs/cours/lib/python3.11/site-packages/sklearn/linear_model/_coordinate_descent.py:592: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 5053742741.42765, tolerance: 20223681.13043478\n",
+      "  model = cd_fast.sparse_enet_coordinate_descent(\n",
+      "/usr/local/Caskroom/miniconda/base/envs/cours/lib/python3.11/site-packages/sklearn/linear_model/_coordinate_descent.py:592: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 2892316090.7337, tolerance: 19511895.993788823\n",
+      "  model = cd_fast.sparse_enet_coordinate_descent(\n",
+      "/usr/local/Caskroom/miniconda/base/envs/cours/lib/python3.11/site-packages/sklearn/linear_model/_coordinate_descent.py:592: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 39476264.76008606, tolerance: 19511895.993788823\n",
+      "  model = cd_fast.sparse_enet_coordinate_descent(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lasso\n",
+      "Time: 4.7827 sec\n",
+      "\n",
+      "Best Parameters: {'alpha': 1}\n",
+      "Best Score (r2): 0.7558083841870559\n",
+      "Train Score: 0.778, Test Score: 0.610\n",
+      "Root Mean Square Error: 6336\n",
+      "————————————————————————————————————————\n",
+      "RandomForestRegressor\n",
+      "Time: 187.5677 sec\n",
+      "\n",
+      "Best Parameters: {'max_depth': 20, 'min_samples_leaf': 1, 'min_samples_split': 5, 'n_estimators': 300}\n",
+      "Best Score (r2): 0.81851110084501\n",
+      "Train Score: 0.950, Test Score: 0.666\n",
+      "Root Mean Square Error: 5870\n",
+      "————————————————————————————————————————\n",
+      "XGBRegressor\n",
+      "Time: 7.8679 sec\n",
+      "\n",
+      "Best Parameters: {'gamma': 0, 'max_depth': 2, 'n_estimators': 200}\n",
+      "Best Score (r2): 0.8173189504919837\n",
+      "Train Score: 0.876, Test Score: 0.655\n",
+      "Root Mean Square Error: 5959\n",
+      "————————————————————————————————————————\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grids = [LR_parameters, LR_parameters, RF_parameters, XGB_parameters]\n",
+    "\n",
+    "for model, param_grid in zip(models, param_grids):\n",
+    "    start = time.time()\n",
+    "\n",
+    "    # Perform GridSearchCV\n",
+    "    grid_search = GridSearchCV(model, param_grid, cv=3, scoring='r2')\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "    end = time.time()\n",
+    "\n",
+    "    \n",
+    "    print(type(model).__name__)\n",
+    "    print(\"Time: {:.4f} sec\".format(end - start))\n",
+    "    print('')\n",
+    "    print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "    print(\"Best R2-Score (r2):\", grid_search.best_score_)\n",
+    "    \n",
+    "    best_model = grid_search.best_estimator_\n",
+    "\n",
+    "    print(\"Train Score: {:.3f}, Test Score: {:.3f}\".format(\n",
+    "        best_model.score(X_train, y_train), best_model.score(X_test, y_test)))\n",
+    "    \n",
+    "    y_pred = best_model.predict(X_test)\n",
+    "    rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
+    "    print(\"Root Mean Square Error: {:.0f}\".format(rmse))\n",
+    "    \n",
+    "    print(40 * \"—\")"
    ]
   },
   {
